--- a/task1/index.html
+++ b/task1/index.html
@@ -5,17 +5,21 @@
 	<title>Title</title>
 </head>
 <body>
-<p>Устанавливаем связть с kubsu.ru и узнаем IP-адрес kubsu.ru с помощью команды ping</p>
-<img src="img/ping.png" width="75%">
-<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu.ru</p>
-<img src="img/kubsu.png" width="75%">
-<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu-dev.ru</p>
-<img src="img/kubsu-dev.png" width="75%">
-<p>С помощью команды whois узнаем дату регистрации домена kubsu.ru</p>
-<img src="img/kubsu_whois.png" width="75%">
-<p>С помощью команды whois узнаем дату регистрации домена kubsu-dev.ru</p>
-<img src="img/kubsu-dev_whois.png" width="75%">
-<p>Копируем задание на локальный компьютер с сервера, предварительно добавив его туда</p>
-<img src="img/filezila.png" width="75%">
+	<p>Подключаемся к серверу с помощью ssh</p>
+	<img src="img/ssh.png" width="40%">
+	<p>Устанавливаем связь с kubsu.ru и узнаем IP-адрес kubsu.ru с помощью команды ping</p>
+	<img src="img/ping.png" width="40%">
+	<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu.ru</p>
+	<img src="img/kubsu.png" width="40%">
+	<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu-dev.ru</p>
+	<img src="img/kubsu-dev.png" width="40%">
+	<p>С помощью команды whois узнаем дату регистрации домена kubsu.ru</p>
+	<img src="img/kubsu_whois.png" width="40%">
+	<p>С помощью команды whois узнаем дату регистрации домена kubsu-dev.ru</p>
+	<img src="img/kubsu-dev_whois.png" width="40%">
+	<p>Копируем задание на локальный компьютер с сервера, предварительно добавив его туда</p>
+	<img src="img/kubsu-dev_whois.png" width="40%">
+	<p>Пример клонирования с гитхаб репозитория</p>
+	<img src="img/clone.png" width="40%">
 </body>
 </html>
