--- a/task1/index.html
+++ b/task1/index.html
@@ -21,7 +21,7 @@
 	<img src="img/kubsu-dev_whois.png" width="40%">
 	<p>Пример клонирования с гитхаб репозитория</p>
 	<img src="img/clone.png" width="40%">
-	
-aaaaaa
+	<p>Отправляем изменения с гитхаба на сервер</p>
+	<img src="img/pull.png" width="40%">
 </body>
 </html>
