--- a/task1/index.html
+++ b/task1/index.html
@@ -7,13 +7,18 @@
 <body>
 	<p>Подключаемся к серверу с помощью ssh</p>
 	<img src="img/ssh.png" width="40%">
-	<p>Устанавливаем связь с kubsu.ru и узнаем IP-адрес kubsu.ru с помощью команды ping</p>
+	<p>Команда ping позволяет проверить соединение между двумя узлами. Устанавливаем связь с kubsu.ru от сервера kubsu-dev.ru, узнаем IP-адрес kubsu.ru</p>
 	<img src="img/ping.png" width="40%">
-	<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu.ru</p>
+	<p>DNS соединяет IP-адрес с доменным именем, которое ему соответствует.
+	<br>NSLOOKUP — это утилита, которая позволяет через командную строку узнать содержимое DNS.<br>
+	А-запись - адресная запись, которая используется для связи домена и IP-адреса сервера.
+	MX запись — запись, которая указывает на сервер, который принимает почту для домена.
+	С помощью команды nslookup узнаем A-записи и MX-записи kubsu.ru</p>
 	<img src="img/kubsu.png" width="40%">
 	<p>С помощью команды nslookup узнаем A-записи и MX-записи kubsu-dev.ru</p>
 	<img src="img/kubsu-dev.png" width="40%">
-	<p>С помощью команды whois узнаем дату регистрации домена kubsu.ru</p>
+	<p>С помощью команды whois узнаем дату регистрации домена kubsu.ru<br>
+	Сервис Whois позволяет узнать информацию о домене, свободен ли домен, его возраст, а также кто владелец домена – юридическое или физическое лицо.</p>
 	<img src="img/kubsu_whois.png" width="40%">
 	<p>С помощью команды whois узнаем дату регистрации домена kubsu-dev.ru</p>
 	<img src="img/kubsu-dev_whois.png" width="40%">
