--- a/task1/index.html
+++ b/task1/index.html
@@ -21,7 +21,7 @@
 	Сервис Whois позволяет узнать информацию о домене, свободен ли домен, его возраст, а также кто владелец домена – юридическое или физическое лицо.</p>
 	<img src="img/kubsu_whois.png" width="40%">
 	<p>С помощью команды whois узнаем дату регистрации домена kubsu-dev.ru</p>
-	<img src="img/kubsu-dev_whois.png" width="40%">
+	<img src="img/filezila.png" width="40%">
 	<p>Копируем задание на локальный компьютер с сервера, предварительно добавив его туда</p>
 	<img src="img/kubsu-dev_whois.png" width="40%">
 	<p>Пример клонирования с гитхаб репозитория</p>
