--- a/task1/index.html
+++ b/task1/index.html
@@ -22,11 +22,11 @@
 	<img src="img/kubsu_whois.png" width="40%">
 	<p>С помощью команды whois узнаем дату регистрации домена kubsu-dev.ru</p>
 	<img src="img/kubsu-dev_whois.png" width="40%">
-	<p>Копируем задание на локальный компьютер с сервера, предварительно добавив его туда</p>
-	<img src="img/filezila.png" width="40%">
-	<p>Пример клонирования с гитхаб репозитория</p>
+	<p>Добавили скрины в удаленный репозиторий и клонируем проект на сервер с помощью команды clone</p>
 	<img src="img/clone.png" width="40%">
-	<p>Отправляем изменения с гитхаба на сервер</p>
+	<p>Копируем задание на локальный компьютер с сервера, предварительно добавив его туда, делаем скрин</p>
+	<img src="img/filezila.png" width="40%">
+	<p>Добавляем скрин файлзилы на удаленный сервер и отправляем изменения на сервер с помощью команды pull</p>
 	<img src="img/pull.png" width="40%">
 </body>
 </html>
