--- a/task2/index.html
+++ b/task2/index.html
@@ -13,7 +13,7 @@
 <p>Получить главную страницу методом GET в протоколе HTTP 1.0</p>
 <img src="img/img1.png">
 <p>Получить внутреннюю страницу методом GET в протоколе HTTP 1.1;</p>
-<img src="img/-img2.png">
+<img src="img/img2.png">
 <p>Определить размер файла file.tar.gz, не скачивая его</p>
 <img src="img/img3.png">
 <p>Определить медиатип ресурса /image.png</p>
