--- a/task2/index.html
+++ b/task2/index.html
@@ -8,8 +8,6 @@
 	<title>Document</title>
 </head>
 <body>
-<p>Добавил папку files на сервер</p>
-<img src="img/files.png">
 <p>Получить главную страницу методом GET в протоколе HTTP 1.0</p>
 <img src="img/img1.png">
 <p>Получить внутреннюю страницу методом GET в протоколе HTTP 1.1;</p>
@@ -24,5 +22,7 @@
 <img src="img/img6.png">
 <p>Определить кодировку ресурса /index.php</p>
 <img src="img/img7.png">
+<p>Работа с git</p>
+<img src="img/git.png">
 </body>
 </html>
