--- a/task2/index.html
+++ b/task2/index.html
@@ -8,6 +8,8 @@
 	<title>Document</title>
 </head>
 <body>
+	<p>Проверка работоспособности phр файлa</p>
+	<img src="img/php.png">
 <p>Получить главную страницу методом GET в протоколе HTTP 1.0</p>
 <img src="img/img1.png">
 <p>Получить внутреннюю страницу методом GET в протоколе HTTP 1.1;</p>
