--- a/task2/index.html
+++ b/task2/index.html
@@ -8,8 +8,10 @@
 	<title>Document</title>
 </head>
 <body>
-	<p>Проверка работоспособности phр файлa</p>
-	<img src="img/php.png">
+<p>Добавили папку files на гитхаб и сделали 'пул' на сервере</p>
+<img src="img/pull1.png">
+<p>Проверка работоспособности phр файлa</p>
+<img src="img/php.png">
 <p>Получить главную страницу методом GET в протоколе HTTP 1.0</p>
 <img src="img/img1.png">
 <p>Получить внутреннюю страницу методом GET в протоколе HTTP 1.1;</p>
@@ -24,7 +26,7 @@
 <img src="img/img6.png">
 <p>Определить кодировку ресурса /index.php</p>
 <img src="img/img7.png">
-<p>Работа с git</p>
-<img src="img/git.png">
+<p>Добавили скрины и html страницу на гитхаб и сделали 'пул' на сервере</p>
+<img src="img/pull2.png">
 </body>
 </html>
